<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">Recipe Reader</string>
    <string name="Start">Start</string>
    <string name="Instructions">Instructions</string>
    <string name="Ingredients">Ingredients</string>
    <string name="sort_title">Sort by \nTitle</string>
    <string name="sort_cat">Sort by \nCategory</string>
    <string name="sort_rating">Sort by \nRating</string>
    <string name="create">Sign In or Create New User</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
<string-array name="categories">
    <item>Appetizers ></item>
    <item>Salads ></item>
    <item>Soups ></item>
    <item>Main Courses ></item>
    <item>Desserts ></item>
</string-array>
<string-array name="ingredients">
    <item>1 cup something or other</item>
    <item>4 ounces something else</item>
    <item>¼ tsp this or that</item>
</string-array>
<string-array name="instructions">
    <item>1. Do something</item>
    <item>2. Do something else</item>
    <item>3. Eat</item>
</string-array>
    <string name="Search">Search</string>
    <string name="Search_Types">Recipes, ingredients, etc.</string>
    <string name="Log_Out">Log Out</string>
    <string name="Step_Back">Back</string>
    <string name="Repeat_Step">Repeat step</string>
    <string name="Step_Forward">Forward</string>
    <string name="Threshold">Set threshold</string>
    <string name="Yield">Yield:</string>
    <string name="Cook_Time">Cooking time:</string>
    <string name="Total_Time">Total time:</string>
    <string name="Calories">Calories per serving:</string>
</resources>
