<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"/>
    <EditText
        android:id="@+id/userEntry"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"/>
    <TextView
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEntry"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/passwordEntry"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"/>
    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEntry"
        android:text="@string/log_in" />
</RelativeLayout>